[Update] modify to publish to crates.io

--- a/onebot_v11_macro/Cargo.toml
+++ b/onebot_v11_macro/Cargo.toml
@@ -2,8 +2,8 @@
 name = "onebot_v11_macro"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+description = "OneBot v11 macro"
+license = "MIT OR Apache-2.0"
 
 [dependencies]
 quote = "1.0.35"
