--- a/onebot_v11/Cargo.toml
+++ b/onebot_v11/Cargo.toml
@@ -2,11 +2,14 @@
 name = "onebot_v11"
 version = "0.1.0"
 edition = "2021"
+description = "OneBot v11 with NapCat/llonebot extension"
+license = "MIT OR Apache-2.0"
+
 
 [dependencies]
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
-onebot_v11_macro = { path = "../onebot_v11_macro" }
+onebot_v11_macro = { version = "0.1.0" }
 reqwest = { version = "0.12.5", features = ["json"] }
 anyhow = "1.0.80"
 tokio = { version = "1.36.0", features = ["full"] }
