--- a/onebot_v11/Cargo.toml
+++ b/onebot_v11/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.3"
 edition = "2021"
 description = "OneBot v11 with NapCat/llonebot extension"
 license = "MIT OR Apache-2.0"
-
+repository = "https://github.com/canxin121/onebotv11_rs"
+readme = "readme.md"
 
 [dependencies]
 serde = { version = "1.0.208", features = ["derive"] }
